Properties, Methods and Constants naming conventions.

--- a/src/app/live-chat/messages-list/messages-list.component.html
+++ b/src/app/live-chat/messages-list/messages-list.component.html
@@ -1,5 +1,5 @@
 <div class="list-group">
     <div class="row list-group-item" *ngFor="let message of messages" @added>
-        <app-live-chat-message [message]="message"></app-live-chat-message>
+        <app-live-chat-message-detail [message]="message"></app-live-chat-message-detail>
     </div>
 </div>
